--- a/.gitignore
+++ b/.gitignore
@@ -155,3 +155,27 @@ thumb
 sketch
 
 # End of https://www.toptal.com/developers/gitignore/api/node,react
+# Logs
+logs
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+lerna-debug.log*
+
+node_modules
+dist
+dist-ssr
+*.local
+
+# Editor directories and files
+.vscode/*
+!.vscode/extensions.json
+.idea
+.DS_Store
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw?
