--- a/.gitignore
+++ b/.gitignore
@@ -13,7 +13,9 @@ lerna-debug.log*
 
 # Diagnostic reports (https://nodejs.org/api/report.html)
 report.[0-9]*.[0-9]*.[0-9]*.[0-9]*.json
-
+uploads
+./uploads
+/uploads
 # Runtime data
 pids
 *.pid
